# third_parties

./: .gitignore  .gitmodules  LICENSE  README.md
src/: CMakeLists.txt  apply-patches.sh
src/CatchMain/: CMakeLists.txt
src/google-benchmark-main/: CMakeLists.txt
src/patches/: range-v3_FixCMakeLists.patch
